# hello-python-ci

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_app.py  test_signin.py  zodiac.py
.github/workflows/: ci.yml
flask_auth/: .gitignore  Pipfile  __init__.py
flask_auth.egg-info/: PKG-INFO  SOURCES.txt
flask_auth/instance/: db.sqlite
flask_auth/project/: __init__.py  auth.py  create_tables.py  forms.py  main.py  models.py
flask_auth/project/templates/: _tweet_card.html  base.html  hashtag.html  home.html  index.html  login.html  notifications.html  password.html  profile.html  profile_ext.html  search_results.html  signup.html  tweet.html  tweets.html
flask_auth/tests/: conftest.py  test_change_password.py  test_signin.py  test_signup.py
instance/: db.sqlite
